Docker/wordpress/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress
  labels:
    app: wordpress
spec:
  revisionHistoryLimit: 100
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      restartPolicy: Always
      affinity:  # affinity 可以根据 pod 标签来选择执行 node。是一种控制 pod 的分布趋势的手段。
        # 应用反亲和（排斥）规则。如果希望尽可能调度在同一个节点上，使用 podAffinity
        podAntiAffinity:
          # required 表明这是一个硬性要求。如果是 preferred 则表示软性要求。
          # IgnoredDuringExecution 表示如果节点的标签在运行中发生改变，那么忽略该变化不做重新分配。
          requiredDuringSchedulingIgnoredDuringExecution:
            # pod 选择器(如果用的是 nodeAffinity 那么就是 node label 选择器)
            - labelSelector:
                # 标签选择的规则是 pod 的标签 "app" 包含有 "zk".
                # 因为应用的是排斥规则，因此也就是说一个结点上只能运行一个带有 app:wordpress 标签的 pod
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                    - wordpress
              topologyKey: "kubernetes.io/hostname"
              # pod 如果具备 namespace，则需要指定
              namespaces: ["wordpress"]
      # Init database
      containers:
      - image: wordpress:4.8-apache
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 5
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wp-pv-claim
      - name: init-db-configmap
        configMap:
          name: init-db-configmap
          defaultMode: 0777
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wordpress
  labels:
    app: wordpress
spec:
  ports:
    - port: 80
  selector:
    app: wordpress
    tier: frontend
  type: ClusterIP
