Docker/wordpress/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: wordpress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /wp
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  rules:
  - http:
      paths:
      - path: /wp
        backend:
          serviceName: wordpress
          servicePort: 80
    # host: wangji.pro
  tls:
  - secretName: ingress-secret
  #  hosts
  #   - wangji.pro
